--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://kit.fontawesome.com/abe9c54cc4.js"
       crossorigin="anonymous"
@@ -24,7 +24,7 @@
     </section>
     <!-- The login section is for users to login to their accounts, the create user input fields are for creating new users, once the user logs in the login screen will be hidden-->
     <section class="login">
-      <img id="login-image" src="./assets/images/login-image.jpg" />
+      <img id="login-image" src="/images/login-image.jpg" />
       <h1>A Bank for the People by the People</h1>
       <div class="log-user">
         <h2>Login</h2>
@@ -48,6 +48,6 @@
         <button id="create-submit">Submit</button>
       </div> -->
     </section>
-    <script src="script.js" async defer></script>
+    <script src="js/script.js" async defer></script>
   </body>
 </html>
