--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/testimonials.css">
     <script
       src="https://kit.fontawesome.com/abe9c54cc4.js"
       crossorigin="anonymous"
@@ -22,3 +23,5 @@
         <h2 id="testimonials"><a href="/testimonials">Testimonials</a></h2>
       </nav>
     </section>
+
+    
