--- a/views/testimonials.ejs
+++ b/views/testimonials.ejs
@@ -2,5 +2,139 @@
   <!-- The testimonials section will have the reviews that customers left for us. We can have a form for that on the dashboard so the logged in users can submit reviews-->
   <section class="testimonials">
 
+    <!-- Slide show container -->
+    <div class="container__div_slideshow">
+      <div class="slide">
+        <div class="card__div_testimonial card__slides1">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides1">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides1">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+      </div>
+
+      <!-- <div class="slide">
+        <div class="card__div_testimonial card__slides1">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides1">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides1">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+      </div> -->
+    </div>
+
+
+    <!-- Slide show container -->
+    <div class="container__div_slideshow">
+      <div class="slide">
+        <div class="card__div_testimonial card__slides2">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides2">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides2">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+      </div>
+
+      <!-- <div class="slide">
+        <div class="card__div_testimonial card__slides2">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides2">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+
+        <div class="card__div_testimonial card__slides2">
+
+          <figure class="card__figure">
+            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
+          </figure>
+
+          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
+          <p class="card__p_author">- Spongebob Squarepants</p>
+        </div>
+      </div> -->
+    </div>
   </section>
 <%- include('partials/footer') -%>
