--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,37 @@
 <%- include('partials/header') -%>
-  <!-- The login section is for users to login to their accounts, the create user input fields are for creating new users, once the user logs in the login screen will be hidden-->
-  <section class="login">
-    <img id="login-image" src="/images/login-image.jpg" />
-    <h1>A Bank for the People by the People</h1>
-    <div class="log-user">
-      <form action="/" method="POST">
-        <h2>Login</h2>
-        <label for="username"><h3>Client Username</h3></label>
-        <input name="username" />
-        <label for="password"><h3>Password</h3></label>
-        <input type="password" name="password" />
-        <button type="submit" id="login-submit">Submit</button>
-        <button id="register"><a href="/register">Register Now</a></button>
-        <h4>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-          necessitatibus illo inventore autem consequatur animi, hic architecto
-          dicta? Magnam, saepe?Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Corrupti laborum dolore vero sit rerum odio omnis
-          nesciunt impedit et tempora magnam ipsum perferendis, temporibus
-          quisquam doloribus? Consectetur aperiam voluptate ab.
-        </h4>
-      </form>
-    </div>
-    <!-- <div class="create">
+<!-- The login section is for users to login to their accounts, the create user input fields are for creating new users, once the user logs in the login screen will be hidden-->
+<section class="login">
+  <img id="login-image" src="/images/login-image.jpg" />
+  <h1>A Bank for the People by the People</h1>
+  <div class="log-user">
+    <form action="/" method="POST">
+      <h2>Login</h2>
+      <label for="username"><h3>Client Username</h3></label>
+      <input name="username" />
+      <label for="password"><h3>Password</h3></label>
+      <input type="password" name="password" />
+      <button type="submit" id="login-submit">
+        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+      </button>
+      <button id="register">
+        <a href="/register"
+          ><i class="fa-solid fa-address-card"></i>Register Now</a
+        >
+      </button>
+      <h4>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+        necessitatibus illo inventore autem consequatur animi, hic architecto
+        dicta? Magnam, saepe?Lorem ipsum, dolor sit amet consectetur adipisicing
+        elit. Corrupti laborum dolore vero sit rerum odio omnis nesciunt impedit
+        et tempora magnam ipsum perferendis, temporibus quisquam doloribus?
+        Consectetur aperiam voluptate ab.
+      </h4>
+    </form>
+  </div>
+  <!-- <div class="create">
       <input id="create-user" />
       <input id="create-pass" />
       <button id="create-submit">Submit</button>
     </div> -->
-  </section>
+</section>
 <%- include('partials/footer') -%>
