--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/testimonials.css">
+    <link rel="stylesheet" href="css/testimonials.css" />
     <script
       src="https://kit.fontawesome.com/abe9c54cc4.js"
       crossorigin="anonymous"
@@ -17,11 +17,14 @@
     <!--The navbar will remain same, it will be carried out to the user account page-->
     <section class="nav">
       <nav class="navbar">
+        <div id="logo">
+          <a href="#"><i class="fa-solid fa-people-roof"></i></a>
+        </div>
         <h2 id="home"><a href="/">Home</a></h2>
         <h2 id="about"><a href="/about">About</a></h2>
-        <h2 id="contact"><a href="/contact">Contact Us</a></h2>
+        <h2 id="contact"><a href="/contact">Contact</a></h2>
         <h2 id="testimonials"><a href="/testimonials">Testimonials</a></h2>
       </nav>
     </section>
-
-    
+  </body>
+</html>
