Add liveReload module

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         >
       </button>
       <h4>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+        LOREM IPSUM dolor sit amet consequatur adipisicing elit. Iure
         necessitatibus illo inventore autem consequatur animi, hic architecto
         dicta? Magnam, saepe?Lorem ipsum, dolor sit amet consectetur adipisicing
         elit. Corrupti laborum dolore vero sit rerum odio omnis nesciunt impedit
