--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,16 @@
 <script src="js/script.js" async defer></script>
 </body>
+<div class="seperator"></div>
+<footer>
+    <h2 id="register">
+        <a href="/register">Create a new Account now!</a>
+      </h2>
+    <ul id="footer-list">
+        <li>Economics</li>
+        <li>Apply Online</li>
+        <li>Careers</li>
+        <li>Branch Locator</li>
+        <li>Book an appointment</li>
+    </ul>
+</footer>
 </html>
