--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,14 +16,17 @@
   <body>
     <!--The navbar will remain same, it will be carried out to the user account page-->
     <section class="nav">
+      <div id="logo">
+        <i class="fa-solid fa-people-roof"></i>
+      </div>
       <nav class="navbar">
-        <div id="logo">
-          <a href="#"><i class="fa-solid fa-people-roof"></i></a>
-        </div>
         <h2 id="home"><a href="/">Home</a></h2>
         <h2 id="about"><a href="/about">About</a></h2>
         <h2 id="contact"><a href="/contact">Contact</a></h2>
         <h2 id="testimonials"><a href="/testimonials">Testimonials</a></h2>
+        <h2 id="register">
+          <a href="/register">Register Now</a>
+        </h2>
       </nav>
     </section>
   </body>
