--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') -%>
   <!-- The about us section will have the bank statement and all the options for the logged in client-->
   <section class="dashboard">
-    <h1>Welcome <%=userName%></h1>
+    <h1>Welcome <%=username%></h1>
+    <h2>Your balance: $<%=balance%></h2>
   </section>
 <%- include('partials/footer') -%>
