--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <script src="js/script.js" async defer></script>
+<script src="js/testimonials.js"></script>
 </body>
 <div class="seperator"></div>
 <footer>
