--- a/views/testimonials.ejs
+++ b/views/testimonials.ejs
@@ -4,137 +4,63 @@
 
     <!-- Slide show container -->
     <div class="container__div_slideshow">
-      <div class="slide">
+      <div class="slides1 fade">
         <div class="card__div_testimonial card__slides1">
-
           <figure class="card__figure">
             <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
           </figure>
 
           <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
+          <p class="card__p_author">- Eilene Hall</p>
         </div>
 
         <div class="card__div_testimonial card__slides1">
-
           <figure class="card__figure">
             <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
           </figure>
 
           <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
+          <p class="card__p_author">- Angela Hill</p>
         </div>
 
         <div class="card__div_testimonial card__slides1">
-
           <figure class="card__figure">
             <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
           </figure>
 
           <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
+          <p class="card__p_author">- Rod Holt</p>
         </div>
       </div>
 
-      <!-- <div class="slide">
+      <div class="slides1 fade">  
         <div class="card__div_testimonial card__slides1">
-
           <figure class="card__figure">
             <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
           </figure>
 
           <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
-        </div>
-
-        <div class="card__div_testimonial card__slides1">
-
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
+          <p class="card__p_author">- Gene Passman</p>
         </div>
 
         <div class="card__div_testimonial card__slides1">
-
           <figure class="card__figure">
             <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
           </figure>
 
           <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
-        </div>
-      </div> -->
-    </div>
-
-
-    <!-- Slide show container -->
-    <div class="container__div_slideshow">
-      <div class="slide">
-        <div class="card__div_testimonial card__slides2">
-
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
+          <p class="card__p_author">- Craig Sloan</p>
         </div>
 
-        <div class="card__div_testimonial card__slides2">
-
+        <div class="card__div_testimonial card__slides1">
           <figure class="card__figure">
             <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
           </figure>
 
           <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
-        </div>
-
-        <div class="card__div_testimonial card__slides2">
-
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
+          <p class="card__p_author">- Faith Gonzalez</p>
         </div>
       </div>
-
-      <!-- <div class="slide">
-        <div class="card__div_testimonial card__slides2">
-
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
-        </div>
-
-        <div class="card__div_testimonial card__slides2">
-
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
-        </div>
-
-        <div class="card__div_testimonial card__slides2">
-
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Spongebob Squarepants</p>
-        </div>
-      </div> -->
     </div>
   </section>
 <%- include('partials/footer') -%>
